# Neuro-Symbolic-MLOps-for-Healthcare-AI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmarks/: run_benchmark.py
configs/: base.yaml  prometheus.yml
knowledge_bases/: drug_interactions.json
src/: __init__.py  config.py
src/api/: __init__.py  main.py  schemas.py
src/neural/: __init__.py  confidence.py  llm_client.py  uncertainty.py
src/router/: __init__.py  complexity_estimator.py  decision_engine.py  latency_manager.py
src/symbolic/: __init__.py  knowledge_base.py  rule_engine.py  z3_solver.py
src/verification/: __init__.py  contract_checker.py  drift_detector.py
tests/: benchmark_dataset.json  conftest.py  test_benchmark.py  test_router.py  test_symbolic.py  test_verification.py
